# gaslight

./: README.md  pyproject.toml
create_grid/: README.md  create_gaslight_grid-OLD.py  create_gaslight_grid.py  create_gaslight_grid.sh  create_grid.py  create_grid.sh  run_cloudy-OLD.py  run_cloudy.job  run_cloudy.py  run_cloudy_test.sh  setup_grid_creation.py  setup_grid_creation.sh  utils.py
create_grid/config/: agn-c23.01-density_exploration-v1.yaml  agn-c23.01-extremes-v1.yaml  agn-c23.01-reduced-v1.yaml  agn-c23.01-test-v1.yaml  agn-c23.01-v1.yaml  c23.01-agn-blr.yaml  c23.01-agn-limited.yaml  c23.01-agn-nlr.yaml  c23.01-full.yaml  c23.01-reduced-depletion:None.yaml  c23.01-reduced-grains:ISM.yaml  c23.01-reduced-grains:None.yaml  c23.01-reduced.yaml  c23.01-test.yaml  sps-c23.01-reduced-depletion:None-v1.yaml  sps-c23.01-reduced-grains:ISM-v1.yaml  sps-c23.01-reduced-grains:None-v1.yaml  sps-c23.01-reduced-v1.yaml  sps-c23.01-test-v1.yaml  sps-c23.01-v1.yaml
docs/source/: docs.ipynb
examples/: agn.ipynb  all_models.ipynb  explore_diagrams.ipynb  explore_variations.ipynb
logo/: banner.ai  small_logo.psd
src/gaslight/: grid.py  line.py
tools/: agn_vs_stars.ipynb  all_models.ipynb  basic.ipynb  create_small_grid.py  explore_diagrams.ipynb  explore_incident_grids.ipynb  explore_luminosities.ipynb  explore_ratios.ipynb  flattened_grids.ipynb  variable.ipynb
